[project]
name = "ghly"
version = "0.1.0"
description = "GitHub CDN proxy service with caching"
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]>=2.19.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "redis[asyncio]>=5.0.0",
    "aioboto3>=12.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]
